--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project>
   <modelVersion>4.0.0</modelVersion>
   <groupId>ca.uwo.csd.cs2212.abhinavmi1</groupId>
-  <artifactId>abhinavmi1-lab5</artifactId>
+  <artifactId>abhinavmi1</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
 
